Fix sidebar on mobile

--- a/src/docs/.vuepress/theme/styles/index.styl
+++ b/src/docs/.vuepress/theme/styles/index.styl
@@ -42,7 +42,6 @@ body
 
 .sidebar
   font-size 16px
-  // background-color #fff
   width $sidebarWidth
   position fixed
   z-index 10
@@ -51,8 +50,11 @@ body
   left 0
   bottom 0
   box-sizing border-box
-  // border-right 1px solid $borderColor
   overflow-y auto
+
+  @media (max-width: $MQMobile)
+    background-color #fff
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 
 {$contentClass}:not(.custom)
   @extend $wrapper
